--- a/env.sample
+++ b/env.sample
@@ -1,4 +1,4 @@
-COMPOSE_PROJECT_NAME=external-ap
+COMPOSE_PROJECT_NAME=b-connect
 
 PHPVERSION=php83
 DOCUMENT_ROOT=./www
@@ -15,7 +15,7 @@ XDEBUG_LOG_DIR=./logs/xdebug
 XDEBUG_PORT=9003
 
 DATABASE=mysql8
-MYSQL_INITDB_DIR=./config/initdb
+MYSQL_INITDB_DIR=./configs/mysql/initdb
 MYSQL_DATA_DIR=./data/mysql
 MYSQL_LOG_DIR=./logs/mysql
 
@@ -26,7 +26,7 @@ HOST_MACHINE_MYSQL_PORT=3306
 HOST_MACHINE_PMA_PORT=8080
 HOST_MACHINE_PMA_SECURE_PORT=8443
 
-MYSQL_ROOT_PASSWORD=password
-MYSQL_USER=radius
-MYSQL_PASSWORD=radius
-MYSQL_DATABASE=radius
+MYSQL_ROOT_PASSWORD=tiger
+MYSQL_USER=docker
+MYSQL_PASSWORD=docker
+MYSQL_DATABASE=docker
