--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,13 @@ services:
       XDEBUG_CONFIG: "client_host=host.docker.internal remote_port=${XDEBUG_PORT}"
     extra_hosts:
       - "host.docker.internal:host-gateway"
-        
+
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - ${DOCUMENT_ROOT-./www}:/var/www/certbot/:rw
+      - ${SSL_DIR-./configs/ssl}:/etc/letsencrypt/:rw
+
   phpmyadmin:
     image: phpmyadmin
     container_name: "${COMPOSE_PROJECT_NAME}-phpmyadmin"
